We now have the most minimal implementation of a client

--- a/Source/LocalNetAppChat/LocalNetAppChat.ConsoleClient/LocalNetAppChat.ConsoleClient.csproj
+++ b/Source/LocalNetAppChat/LocalNetAppChat.ConsoleClient/LocalNetAppChat.ConsoleClient.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\CommandLineArguments\CommandLineArguments.csproj" />
       <ProjectReference Include="..\LocalNetAppChat.Domain\LocalNetAppChat.Domain.csproj" />
     </ItemGroup>
 
