Started to implement message storage on the server side

--- a/Source/LocalNetAppChat/LocalNetAppChat.ConsoleClient/LocalNetAppChat.ConsoleClient.csproj
+++ b/Source/LocalNetAppChat/LocalNetAppChat.ConsoleClient/LocalNetAppChat.ConsoleClient.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\LocalNetAppChat.Domain\LocalNetAppChat.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
+    </ItemGroup>
+
 </Project>
