--- a/Source/LocalNetAppChat/LocalNetAppChat.Domain/LocalNetAppChat.Domain.csproj
+++ b/Source/LocalNetAppChat/LocalNetAppChat.Domain/LocalNetAppChat.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
+    </ItemGroup>
+
 </Project>
