--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -59,12 +59,10 @@ jobs:
           files: ./Source/${{ env.SOLUTION_DIR }}/${{matrix.OUTPUTDIR}}/
           dest: ${{ env.SOLUTION_DIR }}/${{matrix.OUTPUTDIR}}.zip
 
-      - name: Create Github Release
-        uses: "marvinpinto/action-automatic-releases@latest"
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: false
-          title: LocalNetAppChat v1.${{github.run_number}}
           files: |
             ${{ env.SOLUTION_DIR }}/${{matrix.OUTPUTDIR}}.zip
+
