Added command line arguments to both the server and the client.

--- a/Source/LocalNetAppChat/LocalNetAppChat.Server/LocalNetAppChat.Server.csproj
+++ b/Source/LocalNetAppChat/LocalNetAppChat.Server/LocalNetAppChat.Server.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\CommandLineArguments\CommandLineArguments.csproj" />
       <ProjectReference Include="..\LocalNetAppChat.Domain\LocalNetAppChat.Domain.csproj" />
     </ItemGroup>
 
