Moved files around, so that the domain is devided into shared, serverside and clientside

--- a/Source/LocalNetAppChat/LocalNetAppChat.Domain/LocalNetAppChat.Domain.csproj
+++ b/Source/LocalNetAppChat/LocalNetAppChat.Domain/LocalNetAppChat.Domain.csproj
@@ -10,4 +10,9 @@
       <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Clientside" />
+      <Folder Include="Serverside" />
+    </ItemGroup>
+
 </Project>
