Moved the client side parameter parsing into the domain.

--- a/Source/LocalNetAppChat/LocalNetAppChat.Domain/LocalNetAppChat.Domain.csproj
+++ b/Source/LocalNetAppChat/LocalNetAppChat.Domain/LocalNetAppChat.Domain.csproj
@@ -11,8 +11,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Clientside" />
       <Folder Include="Serverside" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\CommandLineArguments\CommandLineArguments.csproj" />
     </ItemGroup>
 
 </Project>
