--- a/Source/LocalNetAppChat/LocalNetAppChat.Domain/LocalNetAppChat.Domain.csproj
+++ b/Source/LocalNetAppChat/LocalNetAppChat.Domain/LocalNetAppChat.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
       <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
     </ItemGroup>
 
