The logic for the server side is not contained in the library for the client and the bot anymore.

--- a/Source/LocalNetAppChat/LocalNetAppChat.Domain.Tests/LocalNetAppChat.Domain.Tests.csproj
+++ b/Source/LocalNetAppChat/LocalNetAppChat.Domain.Tests/LocalNetAppChat.Domain.Tests.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\LocalNetAppChat.Domain\LocalNetAppChat.Domain.csproj" />
+      <ProjectReference Include="..\LocalNetAppChat.Server.Domain\LocalNetAppChat.Server.Domain.csproj" />
     </ItemGroup>
 
 </Project>
