--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -43,8 +43,23 @@ jobs:
         run: dotnet build --configuration Release --no-restore
         working-directory: Source/${{ env.SOLUTION_DIR }}
 
-      # - name: Test + Cover
-      #   run: ./update-coverage.sh
+      - name: Test + Cover
+        run: dotnet test  -p:CollectCoverage=true -p:CoverletOutput=TestResults/ -p:CoverletOutputFormat=opencover      
+        working-directory: Source/${{ env.SOLUTION_DIR }}
+
+      - name: Create Test Coverage Badge
+        uses: simon-k/dotnet-code-coverage-badge@v1.0.0
+        id: create_coverage_badge
+        with:
+          label: Unit Test Coverage
+          color: brightgreen
+          path: Source/${{ env.SOLUTION_DIR }}/TestResults/coverage.opencover.xml
+          gist-filename: code-coverage.json
+          gist-id: 1234567890abcdef1234567890abcdef
+          gist-auth-token: ${{ secrets.GIST_AUTH_TOKEN }}
+          
+      - name: Print code coverage
+        run: echo "Code coverage percentage ${{steps.create_coverage_badge.outputs.percentage}}%"        
 
       - name: Publish
         run: dotnet publish ${{ env.PROJECT }} -c Release -o ${{matrix.OUTPUTDIR}} -p:PublishReadyToRun=true --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:UseAppHost=true -r ${{matrix.RUNTIMEID}}
