Server side is now correctly reported

--- a/Source/LocalNetAppChat/LocalNetAppChat.Server.Domain.Tests/LocalNetAppChat.Server.Domain.Tests.csproj
+++ b/Source/LocalNetAppChat/LocalNetAppChat.Server.Domain.Tests/LocalNetAppChat.Server.Domain.Tests.csproj
@@ -9,7 +9,7 @@
     <PropertyGroup Condition="$(MSBuildProjectName.Contains('.Tests'))">
         <CollectCoverage>true</CollectCoverage>
         <ExcludeByAttribute>GeneratedCodeAttribute</ExcludeByAttribute>
-        <Exclude>[CommandLineArguments]*</Exclude>
+        <Exclude>[CommandLineArguments]*,[LocalNetAppChat.Domain]*</Exclude>
         <CoverletOutputFormat>lcov</CoverletOutputFormat>
     </PropertyGroup>
 
