--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -1,63 +1,70 @@
 on:
-  push:
+    push:
 
 env:
-  DOTNET_VERSION: "7.0.x" # The .NET SDK version to use
-  SOLUTION_DIR: "LocalNetAppChat"
-  PROJECT: "./LocalNetAppChat.Server/LocalNetAppChat.Server.csproj"
-  RELEASEPREFIX: "LocalNetAppChat"
+    DOTNET_VERSION: "7.0.x" # The .NET SDK version to use
+    SOLUTION_DIR: "LocalNetAppChat"
+    PROJECT: "./LocalNetAppChat.Server/LocalNetAppChat.Server.csproj"
+    RELEASEPREFIX: "LocalNetAppChat"
 
 jobs:
-  build:
-    name: build-${{matrix.os}}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        include:
-          - os: ubuntu-latest
-            RUNTIMEID: linux-x64
-            OUTPUTDIR: lnac-server-linux-x64
+    build:
+        name: build-${{matrix.os}}
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                os: [ubuntu-latest, windows-latest]
+                include:
+                    - os: ubuntu-latest
+                      RUNTIMEID: linux-x64
+                      OUTPUTDIR: lnac-server-linux-x64
 
-          - os: windows-latest
-            RUNTIMEID: win-x64
-            OUTPUTDIR: lnac-server-win-x64
+                    - os: windows-latest
+                      RUNTIMEID: win-x64
+                      OUTPUTDIR: lnac-server-win-x64
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}
+        steps:
+            - uses: actions/checkout@v2
+            - name: Setup .NET Core
+              uses: actions/setup-dotnet@v1
+              with:
+                  dotnet-version: ${{ env.DOTNET_VERSION }}
 
-      - name: Install dependencies
-        run: dotnet restore
-        working-directory: Source/${{ env.SOLUTION_DIR }}
+            - name: Install dependencies
+              run: dotnet restore
+              working-directory: Source/${{ env.SOLUTION_DIR }}
 
-      # - name: Set version number
-      #   run: ./Set-Version-Number.ps1 "1.${{github.run_number}}"
-      #   working-directory: Scripts
-      #   shell: powershell
+            # - name: Set version number
+            #   run: ./Set-Version-Number.ps1 "1.${{github.run_number}}"
+            #   working-directory: Scripts
+            #   shell: powershell
 
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
-        working-directory: Source/${{ env.SOLUTION_DIR }}
+            - name: Build
+              run: dotnet build --configuration Release --no-restore
+              working-directory: Source/${{ env.SOLUTION_DIR }}
 
-      # - name: Test + Cover
-      #   run: ./update-coverage.sh
+            - name: Test + Cover
+              run: dotnet test
+              working-directory: Source/${{ env.SOLUTION_DIR }}
 
-      - name: Publish
-        run: dotnet publish ${{ env.PROJECT }} -c Release -o ${{matrix.OUTPUTDIR}} -p:PublishReadyToRun=true --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:UseAppHost=true -r ${{matrix.RUNTIMEID}}
-        working-directory: Source/${{ env.SOLUTION_DIR }}
+            - name: Coveralls
+              uses: coverallsapp/github-action@master
+              with:
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
+                  path-to-lcov: Source/${{ env.SOLUTION_DIR }}/LocalNetAppChat.Server.Domain.Tests/coverage.info
 
-      - uses: vimtor/action-zip@v1
-        with:
-          files: ./Source/${{ env.SOLUTION_DIR }}/${{matrix.OUTPUTDIR}}/
-          dest: ${{ env.SOLUTION_DIR }}/${{matrix.OUTPUTDIR}}.zip
+            - name: Publish
+              run: dotnet publish ${{ env.PROJECT }} -c Release -o ${{matrix.OUTPUTDIR}} -p:PublishReadyToRun=true --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:UseAppHost=true -r ${{matrix.RUNTIMEID}}
+              working-directory: Source/${{ env.SOLUTION_DIR }}
 
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            ${{ env.SOLUTION_DIR }}/${{matrix.OUTPUTDIR}}.zip
+            - uses: vimtor/action-zip@v1
+              with:
+                  files: ./Source/${{ env.SOLUTION_DIR }}/${{matrix.OUTPUTDIR}}/
+                  dest: ${{ env.SOLUTION_DIR }}/${{matrix.OUTPUTDIR}}.zip
+
+            - name: Release
+              uses: softprops/action-gh-release@v1
+              if: startsWith(github.ref, 'refs/tags/')
+              with:
+                  files: |
+                      ${{ env.SOLUTION_DIR }}/${{matrix.OUTPUTDIR}}.zip
