Added help command for all projects

--- a/Source/LocalNetAppChat/LocalNetAppChat.ConsoleClient/Properties/launchSettings.json
+++ b/Source/LocalNetAppChat/LocalNetAppChat.ConsoleClient/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "LocalNetAppChat.Bot": {
+    "LocalNetAppChat.ConsoleClient": {
       "commandName": "Project",
       "commandLineArgs": "--help"
     }
